[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/PrimaryTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Exports/GameLogo.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="TextureRect" parent="."]
margin_top = 16.0
margin_right = 256.0
margin_bottom = 112.0
texture = ExtResource( 3 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 120.0
margin_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_right = 256.0
margin_bottom = 88.0
custom_constants/separation = 8
alignment = 1

[node name="PlayBtn" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 256.0
margin_bottom = 19.0
text = "Play"

[node name="HowToPlayBtn" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 256.0
margin_bottom = 33.0
text = "How to play"

[node name="InputMapMenuBtn" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 256.0
margin_bottom = 47.0
text = "Input Map"

[node name="SettingsBtn" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 55.0
margin_right = 256.0
margin_bottom = 61.0
text = "Settings"

[node name="ExitBtn" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 69.0
margin_right = 256.0
margin_bottom = 75.0
text = "Exit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -14.0
margin_right = 61.0
margin_bottom = -8.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "2024 - Fanuel Anteneh"

[connection signal="pressed" from="MainMenu/VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/InputMapMenuBtn" to="." method="_on_InputMapMenuBtn_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
